# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ohos_exec_script_config = {
  exec_script_allowlist = [
    "//arkcompiler/ets_frontend/ts2panda/BUILD.gn",
    "//arkcompiler/ets_runtime/test/typeinfer/BUILD.gn",
    "//arkcompiler/runtime_core/libpandabase/BUILD.gn",
    "//arkcompiler/toolchain/build/templates/cxx/cxx.gni",
    "//arkcompiler/toolchain/build/test.gni",
    "//arkcompiler/toolchain/build/third_party_gn/musl/BUILD.gn",
    "//arkcompiler/toolchain/build/third_party_gn/openssl/BUILD.gn",
    "//base/hiviewdfx/hiview/BUILD.gn",
    "//base/security/access_token/access_token.gni",
    "//base/security/selinux_adapter/BUILD.gn",
    "//base/startup/init/interfaces/innerkits/BUILD.gn",
    "//base/startup/init/interfaces/innerkits/token/BUILD.gn",
    "//base/startup/init/services/modules/udid/BUILD.gn",
    "//base/startup/init/test/unittest/lite/BUILD.gn",
    "//base/web/webview/ohos_nweb/BUILD.gn",
    "//build/config/BUILDCONFIG.gn",
    "//build/config/components/hdi/hdi.gni",
    "//build/config/components/hc_gen/hc_gen.gni",
    "//build/config/linux/pkg_config.gni",
    "//build/config/mac/mac_sdk.gni",
    "//build/config/posix/BUILD.gn",
    "//build/config/security/security_config.gni",
    "//build/lite/config/component/lite_component.gni",
    "//build/lite/config/test/test.gni",
    "//build/ohos/app/app.gni",
    "//build/ohos/images/BUILD.gn",
    "//build/ohos/native_stub/native_stub.gni",
    "//build/ohos/ndk/ndk.gni",
    "//interface/sdk_c/ndk_targets.gni",
    "//build/ohos/packages/BUILD.gn",
    "//build/ohos/sa_profile/sa_profile.gni",
    "//build/ohos/sdk/BUILD.gn",
    "//build/ohos_var.gni",
    "//build/templates/bpf/BUILD.gn",
    "//build/templates/common/copy.gni",
    "//build/templates/cxx/cxx.gni",
    "//build/templates/rust/ohos_cargo_crate.gni",
    "//build/templates/rust/ohos_rust_library.gni",
    "//build/templates/rust/rust_bindgen.gni",
    "//build/templates/rust/rust_cxx.gni",
    "//build/templates/rust/rust_template.gni",
    "//build/templates/update/module_update.gni",
    "//build/test.gni",
    "//build/toolchain/BUILD.gn",
    "//build/toolchain/concurrent_links.gni",
    "//build/toolchain/mac/BUILD.gn",
    "//commonlibrary/utils_lite/file/BUILD.gn",
    "//device/board/bearpi/bearpi_hm_micro/liteos_a/BUILD.gn",
    "//device/board/hihope/dayu210/camera/vdi_impl/v4l2/BUILD.gn",
    "//device/board/hihope/rk3568/camera/vdi_impl/v4l2/BUILD.gn",
    "//device/board/hisilicon/hispark_aries/liteos_a/BUILD.gn",
    "//device/board/hisilicon/hispark_taurus/camera/BUILD.gn",
    "//device/board/hisilicon/hispark_taurus/liteos_a/BUILD.gn",
    "//device/board/isoftstone/yangfan/kernel/hdf/drivers/camera/BUILD.gn",
    "//device/board/isoftstone/zhiyuan/kernel/hdf/driver/camera/BUILD.gn",
    "//device/board/kaihong/khdvk_3566b/camera/BUILD.gn",
    "//device/board/lango/dev_wifi_a/hdf_drivers/gpio/BUILD.gn",
    "//device/board/lango/dev_wifi_a/hdf_drivers/uart/BUILD.gn",
    "//device/board/openvalley/niobeu4/liteos_m/hdf_drivers/gpio/BUILD.gn",
    "//device/board/openvalley/niobeu4/liteos_m/hdf_drivers/i2c/BUILD.gn",
    "//device/board/openvalley/niobeu4/liteos_m/hdf_drivers/pwm/BUILD.gn",
    "//device/board/openvalley/niobeu4/liteos_m/hdf_drivers/spi/BUILD.gn",
    "//device/board/openvalley/niobeu4/liteos_m/hdf_drivers/uart/BUILD.gn",
    "//device/board/openvalley/niobeu4/liteos_m/hdf_drivers/watchdog/BUILD.gn",
    "//device/board/osware/imx8mm/drivers/camera/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/core/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/gpio/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/i2c/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/pwm/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/spi/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/uart/BUILD.gn",
    "//device/board/talkweb/niobe407/liteos_m/hdf_drivers/watchdog/BUILD.gn",
    "//device/board/unionman/unionpi_tiger/hardware/camera/BUILD.gn",
    "//device/soc/hisilicon/hi3516dv300/sdk_liteos/BUILD.gn",
    "//device/soc/st/stm32mp1xx/sdk_liteos/BUILD.gn",
    "//drivers/hdf_core/adapter/khdf/liteos_m/hdi_mini.gni",
    "//drivers/hdf_core/adapter/khdf/uniproton/core/BUILD.gn",
    "//drivers/hdf_core/adapter/uhdf2/hdi.gni",
    "//drivers/hdf_core/adapter/uhdf/hdi_small.gni",
    "//drivers/hdf_core/framework/tools/hc-gen/hc_gen.gni",
    "//drivers/peripheral/camera/vdi_base/usb_camera/camera_config/BUILD.gn",
    "//drivers/peripheral/wlan/hdi_service/BUILD.gn",
    "//foundation/arkui/ace_engine/ace_config.gni",
    "//foundation/arkui/ace_engine/build/ace_ext.gni",
    "//foundation/bundlemanager/bundle_framework/appexecfwk.gni",
    "//foundation/communication/dsoftbus/adapter/BUILD.gn",
    "//foundation/communication/dsoftbus/core/authentication/authentication.gni",
    "//foundation/communication/dsoftbus/core/bus_center/bus_center_server.gni",
    "//foundation/communication/dsoftbus/core/bus_center/lnn/decision_center/decision_center.gni",
    "//foundation/communication/dsoftbus/core/bus_center/lnn/lane_hub/lane_hub.gni",
    "//foundation/communication/dsoftbus/core/bus_center/lnn/net_builder/net_builder.gni",
    "//foundation/communication/dsoftbus/core/bus_center/lnn/net_buscenter/net_manager.gni",
    "//foundation/communication/dsoftbus/core/bus_center/lnn/net_ledger/net_ledger.gni",
    "//foundation/communication/dsoftbus/core/common/BUILD.gn",
    "//foundation/communication/dsoftbus/core/connection/ble/conn_ble.gni",
    "//foundation/communication/dsoftbus/core/connection/common/conn_common.gni",
    "//foundation/communication/dsoftbus/core/connection/wifi_direct/wifi_direct.gni",
    "//foundation/communication/dsoftbus/core/discovery/ble/disc_ble.gni",
    "//foundation/communication/dsoftbus/core/transmission/trans_channel/qos/qos.gni",
    "//foundation/communication/dsoftbus/core/transmission/trans.gni",
    "//foundation/communication/dsoftbus/sdk/transmission/session/trans_session_sdk.gni",
    "//foundation/communication/dsoftbus/sdk/transmission/trans_channel/udp/file/file_sdk.gni",
    "//foundation/communication/dsoftbus/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/libsoftbus_stream.gni",
    "//foundation/communication/dsoftbus/tests/core/bus_center/lnn/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/core/discovery/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/core/transmission/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/sdk/transmission/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/sdk/transmission/trans_channel/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/sdk/transmission/trans_channel/udp/file/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/vtp_instance_test/BUILD.gn",
    "//foundation/communication/dsoftbus/tests/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/vtp_stream_socket_test/BUILD.gn",
    "//foundation/graphic/graphic_2d/graphic_config.gni",
    "//interface/sdk-js/BUILD.gn",
    "//kernel/liteos_a/BUILD.gn",
    "//kernel/liteos_a/fs/jffs2/BUILD.gn",
    "//kernel/liteos_a/liteos.gni",
    "//kernel/liteos_m/BUILD.gn",
    "//kernel/liteos_m/liteos.gni",
    "//kernel/uniproton/BUILD.gn",
    "//kernel/uniproton/uniproton.gni",
    "//test/xts/acts/build_lite/BUILD.gn",
    "//test/xts/acts/test_packages.gni",
    "//test/xts/dcts/test_packages.gni",
    "//test/xts/hats/test_packages.gni",
    "//test/xts/tools/build/suite.gni",
    "//test/xts/tools/lite/build/common.gni",
    "//test/xts/tools/lite/build/suite_lite.gni",
    "//third_party/abseil-cpp/BUILD.gn",
    "//third_party/bzip2/BUILD.gn",
    "//third_party/cef/BUILD.gn",
    "//third_party/cups/BUILD.gn",
    "//third_party/cups/cups.gni",
    "//third_party/cups-filters/BUILD.gn",
    "//third_party/curl/BUILD.gn",
    "//third_party/e2fsprogs/e2fsprogs.gni",
    "//third_party/flutter/engine/flutter/frontend_server/BUILD.gn",
    "//third_party/flutter/engine/flutter/shell/platform/fuchsia/dart/BUILD.gn",
    "//third_party/flutter/engine/flutter/shell/version/version.gni",
    "//third_party/flutter/engine/flutter/tools/fuchsia/clang.gni",
    "//third_party/flutter/engine/flutter/web_sdk/BUILD.gn",
    "//third_party/flutter/skia/BUILD.gn",
    "//third_party/flutter/skia/gn/BUILD.gn",
    "//third_party/flutter/skia/third_party/externals/angle2/BUILD.gn",
    "//third_party/flutter/skia/third_party/externals/angle2/build_overrides/build.gni",
    "//third_party/flutter/skia/third_party/externals/angle2/dotfile_settings.gni",
    "//third_party/flutter/skia/third_party/externals/angle2/third_party/vulkan-validation-layers/BUILD.gn",
    "//third_party/glib/BUILD.gn",
    "//third_party/gn/examples/ios/build/BUILD.gn",
    "//third_party/gn/examples/ios/build/config/ios/sdk_info.gni",
    "//third_party/gn/examples/ios/build/toolchain/ios/BUILD.gn",
    "//third_party/grpc/BUILD.gn",
    "//third_party/iptables/BUILD.gn",
    "//third_party/iptables/extensions/BUILD.gn",
    "//third_party/libnl/BUILD.gn",
    "//third_party/libpng/BUILD.gn",
    "//third_party/libusb/BUILD.gn",
    "//third_party/libwebsockets/BUILD.gn",
    "//third_party/mindspore/BUILD.gn",
    "//third_party/musl/BUILD.gn",
    "//third_party/pcre2/BUILD.gn",
    "//third_party/re2/BUILD.gn",
    "//third_party/selinux/BUILD.gn",
    "//third_party/skia/build/fuchsia/BUILD.gn",
    "//third_party/skia/build/fuchsia/fuchsia_download_sdk.gni",
    "//third_party/skia/BUILD.gn",
    "//third_party/skia/gn/skia/BUILD.gn",
    "//third_party/skia/gn/toolchain/BUILD.gn",
    "//third_party/skia/third_party/externals/angle2/BUILD.gn",
    "//third_party/skia/third_party/externals/angle2/build_overrides/build.gni",
    "//third_party/skia/third_party/externals/angle2/dotfile_settings.gni",
    "//third_party/skia/third_party/externals/dawn/build_overrides/build.gni",
    "//third_party/skia/third_party/externals/spirv-tools/build_overrides/build.gni",
    "//third_party/skia/third_party/externals/swiftshader/third_party/SPIRV-Tools/build_overrides/build.gni",
    "//third_party/spirv-tools/build_overrides/build.gni",
    "//third_party/toybox/BUILD.gn",
    "//third_party/wpa_supplicant/wpa_supplicant-2.9_standard/BUILD.gn",
    "//third_party/wpa_supplicant/wpa_supplicant-2.9_standard/wpa_vendor_ext.gni",
    "//build_plugins/config/aosp/config.gni",
    "//build_plugins/sdk/BUILD.gn",
    "//build_plugins/toolchain/ios/BUILD.gn",
    "//build_plugins/config/aosp/sysroot.gni",
    "//build_plugins/config/ios/rules.gni",
    "//build_plugins/config/ios/ios_sdk.gni",
    "//build_plugins/templates/java/rules.gni",
    "//build_plugins/templates/java/internal_rules.gni",
  ]
}
